<resources>
    <string name="app_name">NoteApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notes_available">No Notes available</string>
    <string name="title">Title</string>
    <string name="type_body">Type someTing...</string>
    <string name="note_title">Note Title</string>
    <string name="note_body">Note Body...</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="enter_your_email">Enter your Email.....</string>
    <string name="enter_your_password">Enter Your Password.....</string>
    <string name="signin">SignIn</string>
    <string name="image">image</string>
    <string name="login_to_noteapp">Login To NoteApp</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="email_and_password_not_found_please_try_again">Email And Password Not Found Please Try Again</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_to_noteapp">Sign Up To NoteApp</string>
    <string name="todo">TODO</string>
    <string name="note_app">Welcome to Note App</string>
    <string name="in_this_app_you_can">in this app you can</string>
</resources>